...
                                    <rect key="frame" x="120" y="177" width="40" height="30"/>
                                    <constraints>
                                        <constraint firstAttribute="width" constant="40" id="WxQ-nc-fUF"/>
                                        <constraint firstAttribute="height" constant="30" id="xky-9N-qzy"/>
                                    </constraints>
                                </imageView>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VDv-oo-crj">
                                    <rect key="frame" x="128.5" y="212" width="22.5" height="14"/>
                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bIZ-xZ-unU">
...
                                    <nil key="textColor"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ys-8z-ILJ">
                                    <rect key="frame" x="112" y="436" width="56" height="29"/>
                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                    <state key="normal" title="Cancelar">
                                        <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                    </state>
                                    <connections>
                                        <action selector="cancelAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="ORn-Yk-prd"/>
                                    </connections>
                                </button>
...
                                    <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="14"/>
                                    <color key="textColor" red="0.12941176469999999" green="0.20000000000000001" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                                    <nil key="highlightedColor"/>
                                </label>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="grI-qC-Rbo">
                                    <rect key="frame" x="20" y="389" width="240" height="37"/>
                                    <state key="normal" image="finish"/>
                                    <state key="selected" image="ok"/>
                                    <connections>
                                        <action selector="finishAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="A0i-Jz-v2d"/>
                                    </connections>
                                </button>
                            </subviews>
...
