...
	[self.transaction fadeIn:nil];
	[self.date fadeIn:nil];
	
	[self.button setSelected:YES];
	[self.button setUserInteractionEnabled:NO];
	
	[self.cancel setTitle:@"Hacer otra operación" forState:UIControlStateNormal];
	
}
-(IBAction)cancelAction:(id)sender{
	
	if(self.parent.transaction.date != nil){
		self.parent.position = 0;
...
