...
                                        <rect key="frame" x="15" y="16.5" width="13" height="7"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="13" id="1d5-4W-5Aq"/>
                                            <constraint firstAttribute="height" constant="7" id="ToU-uR-wqp"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="seleccionar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XFP-Cw-WFB">
                                        <rect key="frame" x="43" y="12" width="82" height="17"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                        <color key="textColor" red="0.12941176469999999" green="0.20000000000000001" blue="0.35686274509999999" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
